--- a/src/Eclipse.Web/wwwroot/index.html
+++ b/src/Eclipse.Web/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>Eclipse</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="Eclipse.Web.styles.css" rel="stylesheet">
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
